Bug 68845 - VDPAU/UVD regression
Summary: VDPAU/UVD regression
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/r600 (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-02 12:51 UTC by Kusanagi Kouichi
Modified: 2013-09-02 13:44 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
screenshot with mesa snb-magic-17559-gd13003f (174.88 KB, image/png)
2013-09-02 12:52 UTC, Kusanagi Kouichi
Details
screenshot with mesa snb-magic-17560-g53e20b8 (83.77 KB, image/png)
2013-09-02 12:52 UTC, Kusanagi Kouichi
Details

Description Kusanagi Kouichi 2013-09-02 12:51:31 UTC
Mplayer with VDPAU shows garbage for some videos. The same videos play fine with older mesa. So I bisected mesa and the result is:

53e20b8b418cc85e13d70f41ce160e17847a5096 is the first bad commit
commit 53e20b8b418cc85e13d70f41ce160e17847a5096
Author: Christian König <christian.koenig@amd.com>
Date:   Mon Jul 15 01:50:24 2013 -0600

    vl: use a template for create_video_decoder
    
    Signed-off-by: Christian König <christian.koenig@amd.com>

:040000 040000 44292598330b8e3aba03bf8acd325e46d48f45dc a77402a17cfcdd893cc8f11805437e4d6eb0af22 M	src


Steps to reproduce:

1. Download 854x480 H.264 video from http://www.bigbuckbunny.org/index.php/download/
2. Play it with mplayer using VDPAU. That is to say, mplayer -vo vdpau -vc ffh264vdpau big_buck_bunny_480p_h264.mov
Comment 1 Kusanagi Kouichi 2013-09-02 12:52:13 UTC
Created attachment 85059 [details]
screenshot with mesa snb-magic-17559-gd13003f
Comment 2 Kusanagi Kouichi 2013-09-02 12:52:44 UTC
Created attachment 85060 [details]
screenshot with mesa snb-magic-17560-g53e20b8
Comment 3 Christian König 2013-09-02 13:44:56 UTC
Thanks for the info, accidentally removed the width/height alignment with this commit.

So any video not aligned to 16 in it's width/height showed this problem.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.